--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ html {
 body {
     background: url(./img/background.jpg) no-repeat;
     background-size: 100%;
+    background-attachment: fixed;
 }
 
 header {
@@ -45,8 +46,74 @@ nav ul li a {
     color: #EBEBEB;
     border-radius: 5px;
     text-decoration: none;
+    text-align: center;
 }
 
 nav ul li a:hover {
     background-color: #84CEEB;
+}
+
+content {
+    width: 100%;
+}
+
+.title {
+    width: 770px;
+    height: 320px;
+    margin-left: 198px;
+    margin-top: 0;
+}
+
+.title p {
+    width: 100%;
+    font-size: 96px;
+    font-weight: 500;
+    color: #EBEBEB;
+}
+
+.description {
+    width: 1000px;
+    height: 150px;
+    margin-left: 198px;
+    margin-top: 100px;
+}
+
+.description p {
+    color: #EBEBEB;
+    font-size: 24px;
+}
+
+.catalog {
+    position: absolute;
+    margin-top: 3%;
+    height: 500px;
+    width: 200px;
+    background-color: #8860D0;
+    transform: translateX(-104%);
+}
+
+.catalog p {
+    color: #EBEBEB;
+    padding: 0 10px;
+    text-align: center;
+    margin-top: 40%;
+}
+
+.catalog:after {
+    content: 'Каталог';
+    font-size: 24px;
+    color: #EBEBEB;
+    text-align: center;
+    position: absolute;
+    transform: rotate(-90deg);
+    top: 240px;
+    left: 130px;
+    padding: 8px 50px;
+    background-color: #5AB9EA;
+    border-radius: 0 0 8px 8px;
+}
+
+.catalog:hover {
+    transform: translateX(0%);
+    transition: all 0.7s ease;
 }
