--- a/style_2.css
+++ b/style_2.css
@@ -8,6 +8,9 @@ body {
     background: url(./img/background.jpg) no-repeat;
     background-size: 100%;
     background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 header {
@@ -15,6 +18,10 @@ header {
     width: 100%;
     height: 150px;
     justify-content: space-around;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: inherit;
 }
 
 #logo {
@@ -53,38 +60,12 @@ nav ul li a:hover {
     background-color: #84CEEB;
 }
 
-content {
+.content {
     width: 100%;
-}
-
-.title {
-    width: 770px;
-    height: 320px;
-    margin-left: 198px;
-    margin-top: 0;
-}
-
-.title p {
-    width: 100%;
-    font-size: 96px;
-    font-weight: 500;
-    color: #EBEBEB;
-}
-
-.description {
-    width: 1000px;
-    height: 150px;
-    margin-left: 198px;
-    margin-top: 100px;
-}
-
-.description p {
-    color: #EBEBEB;
-    font-size: 24px;
 }
 
 .catalog {
-    position: absolute;
+    position: fixed;
     margin-top: 3%;
     height: 550px;
     width: 200px;
@@ -116,4 +97,36 @@ content {
 .catalog:hover {
     transform: translateX(0%);
     transition: all 0.7s ease;
+}
+
+.news {
+    margin-left: 198px;
+    margin-top: 200px;
+    margin-right: 198px;
+}
+
+.article {
+    display: flex;
+    margin-bottom: 100px;
+    background: rgba(27, 27, 27, 0.45);
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 30px rgba(27, 27, 27, 0.45);
+
+}
+
+.article img {
+    height: 150px;
+}
+
+.description {
+    padding-left: 40px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.article p {
+    border-radius: 5px;
+    color: #EBEBEB;
+    font-size: 24px;
 }
