--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
     background: url(./img/background.jpg) no-repeat;
     background-size: 100%;
     background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 header {
@@ -15,6 +18,10 @@ header {
     width: 100%;
     height: 150px;
     justify-content: space-around;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: inherit;
 }
 
 #logo {
@@ -61,7 +68,7 @@ content {
     width: 770px;
     height: 320px;
     margin-left: 198px;
-    margin-top: 0;
+    margin-top: 220px;
 }
 
 .title p {
@@ -84,7 +91,7 @@ content {
 }
 
 .catalog {
-    position: absolute;
+    position: fixed;
     margin-top: 3%;
     height: 550px;
     width: 200px;
@@ -92,11 +99,29 @@ content {
     transform: translateX(-104%);
 }
 
-.catalog p {
+.catalog h1 {
     color: #EBEBEB;
     padding: 0 10px;
     text-align: center;
     margin-top: 40%;
+}
+
+.catalog a {
+    color: #EBEBEB;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 40%;
+    text-decoration: none;
+}
+
+.catalog ul li a:hover {
+    color: #84CEEB;
+}
+
+.catalog ul li {
+    list-style-type: none;
+    margin-left: -20px;
+    margin-bottom: 15px;
 }
 
 .catalog:after {
