--- a/style_2.css
+++ b/style_2.css
@@ -73,11 +73,29 @@ nav ul li a:hover {
     transform: translateX(-104%);
 }
 
-.catalog p {
+.catalog h1 {
     color: #EBEBEB;
     padding: 0 10px;
     text-align: center;
     margin-top: 40%;
+}
+
+.catalog a {
+    color: #EBEBEB;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 40%;
+    text-decoration: none;
+}
+
+.catalog ul li a:hover {
+    color: #84CEEB;
+}
+
+.catalog ul li {
+    list-style-type: none;
+    margin-left: -20px;
+    margin-bottom: 15px;
 }
 
 .catalog:after {
@@ -123,6 +141,7 @@ nav ul li a:hover {
     width: 100%;
     height: 100%;
     overflow: hidden;
+
 }
 
 .article p {
@@ -130,3 +149,19 @@ nav ul li a:hover {
     color: #EBEBEB;
     font-size: 24px;
 }
+
+h1 {
+    color: #EBEBEB;
+    padding: 0;
+    margin-top: 0;
+}
+
+ .more {
+    color: #84CEEB;
+    text-decoration: none;
+    margin-left: 20px;
+ }
+ 
+ .more:hover {
+    color: #8860D0;
+ }
