--- a/style.css
+++ b/style.css
@@ -65,9 +65,8 @@ content {
 }
 
 .title {
-    width: 770px;
-    height: 320px;
-    margin-left: 198px;
+    width: 50%;
+    margin-left: 10%;
     margin-top: 220px;
 }
 
@@ -76,13 +75,13 @@ content {
     font-size: 96px;
     font-weight: 500;
     color: #EBEBEB;
+    overflow: hidden;
 }
 
 .description {
-    width: 1000px;
-    height: 150px;
-    margin-left: 198px;
-    margin-top: 100px;
+    width: 50%;
+    margin-left: 10%;
+    margin-top: -70px;
 }
 
 .description p {
@@ -133,7 +132,7 @@ content {
     transform: rotate(-90deg);
     top: 265px;
     left: 127px;
-    padding: 3px 50px;
+    padding: 4px 50px;
     background-color: #5AB9EA;
     border-radius: 0 0 8px 8px;
 }
@@ -141,4 +140,157 @@ content {
 .catalog:hover {
     transform: translateX(0%);
     transition: all 0.7s ease;
+}
+
+@media screen and (max-width: 1330px) {
+    nav ul li a {
+        width: 92px;
+        height: 30px;
+        padding: 0px 25px;
+        margin: 0 10px;
+        border-radius: 4px;
+    }
+
+    nav ul {
+    font-size: 18px;
+    margin: 34px 0;
+    }
+
+    #logo img {
+        width: 100px;
+    }
+
+    .title p {
+        font-size: 48px;
+    }
+
+    .title {
+        width: 40%;
+        margin-left: 15%;
+        margin-top: 120px;
+    }
+
+    .description {
+        width: 40%;
+        margin-left: 15%;
+        margin-top: -30px;
+    }
+    
+    .description p {
+        color: #EBEBEB;
+        font-size: 14px;
+    }
+
+    .catalog {
+        margin-top: 3%;
+        height: 300px;
+        width: 150px;
+        transform: translateX(-104%);
+    }
+    
+    .catalog h1 {
+        font-size: 18px;
+        padding: 0 0px;
+        margin-top: 20%;
+    }
+    
+    .catalog a {
+        font-size: 12px;
+        margin-top: 40%;
+    }
+    
+    .catalog ul li {
+        margin-left: -20px;
+        margin-bottom: 8px;
+    }
+    
+    .catalog:after {
+        font-size: 18px;
+        top: 140px;
+        left: 106px;
+        padding: 1px 25px;
+        border-radius: 0 0 8px 8px;
+    }
+    
+}
+
+@media screen and (max-width: 780px) {
+    nav ul li a {
+        width: 72px;
+        height: 15px;
+        padding: 0px 0px;
+        margin: 0 5px;
+        border-radius: 2px;
+    }
+
+    nav ul {
+    font-size: 10px;
+    margin: 15px 0;
+    }
+
+    #logo img {
+        width: 50px;
+    }
+
+    #logo {
+        margin-top: 5px;
+    }
+
+    .title p {
+        font-size: 18px;
+    }
+
+    .title {
+        width: 30%;
+        margin-left: 15%;
+        margin-top: 60px;
+    }
+
+    .description {
+        width: 30%;
+        margin-left: 15%;
+        margin-top: -16px;
+    }
+    
+    .description p {
+        color: #EBEBEB;
+        font-size: 7px;
+    }
+
+    .catalog {
+        margin-top: 2%;
+        height: 150px;
+        width: 80px;
+        transform: translateX(-104%);
+    }
+    
+    .catalog h1 {
+        font-size: 10px;
+        padding: 0px 0px;
+        margin-top: 10%;
+    }
+    
+    .catalog a {
+        font-size: 6px;
+        margin-top: 0px;
+    }
+
+    .catalog ul {
+        margin-top: 10px;
+    }
+    
+    .catalog ul li {
+        margin-left: -25px;
+        margin-bottom: 8px;
+        line-height: 5px;
+    }
+    
+    .catalog:after {
+        font-size: 10px;
+        top: 72px;
+        left: 54px;
+        padding: 0px 15px;
+        border-radius: 0 0 3px 3px;
+    }
+    
 }
