--- a/style_2.css
+++ b/style_2.css
@@ -34,6 +34,7 @@ nav {
 }
 
 nav ul {
+    width: 100%;
     display: flex;
     font-size: 24px;
     position: relative;
@@ -107,7 +108,7 @@ nav ul li a:hover {
     transform: rotate(-90deg);
     top: 265px;
     left: 127px;
-    padding: 3px 50px;
+    padding: 4px 50px;
     background-color: #5AB9EA;
     border-radius: 0 0 8px 8px;
 }
@@ -118,9 +119,9 @@ nav ul li a:hover {
 }
 
 .news {
-    margin-left: 198px;
+    margin-left: 10%;
     margin-top: 200px;
-    margin-right: 198px;
+    margin-right: 10%;
 }
 
 .article {
@@ -165,3 +166,190 @@ h1 {
  .more:hover {
     color: #8860D0;
  }
+
+ @media screen and (max-width: 1330px) {
+    nav ul li a {
+        width: 92px;
+        height: 30px;
+        padding: 0px 25px;
+        margin: 0 10px;
+        border-radius: 4px;
+    }
+
+    nav ul {
+    font-size: 18px;
+    margin: 34px 0;
+    }
+
+    #logo img {
+        width: 100px;
+    }
+
+    .catalog {
+        margin-top: 3%;
+        height: 300px;
+        width: 150px;
+        transform: translateX(-104%);
+    }
+    
+    .catalog h1 {
+        font-size: 18px;
+        padding: 0 0px;
+        margin-top: 20%;
+    }
+    
+    .catalog a {
+        font-size: 12px;
+        margin-top: 40%;
+    }
+    
+    .catalog ul li {
+        margin-left: -20px;
+        margin-bottom: 8px;
+    }
+    
+    .catalog:after {
+        font-size: 18px;
+        top: 140px;
+        left: 106px;
+        padding: 1px 25px;
+        border-radius: 0 0 8px 8px;
+    }
+    
+    .news {
+        margin-left: 10%;
+        margin-top: 150px;
+        margin-right: 10%;
+    }
+    
+    .article {
+        margin-bottom: 80px;
+        border-radius: 20px;
+        box-shadow: 0px 0px 10px 20px rgba(27, 27, 27, 0.45);
+    
+    }
+    
+    .article img {
+        height: 80px;
+    }
+    
+    .description {
+        padding-left: 40px;
+        width: 100%;
+        height: 100%;
+    
+    }
+    
+    .article p {
+        border-radius: 4px;
+        font-size: 14px;
+    }
+    
+    h1 {
+        font-size: 18px;
+        padding: 0;
+        margin-top: 0;
+    }
+    
+     .more {
+        margin-left: 20px;
+     }
+}
+
+@media screen and (max-width: 780px) {
+    nav ul li a {
+        width: 72px;
+        height: 15px;
+        padding: 0px 0px;
+        margin: 0 5px;
+        border-radius: 2px;
+    }
+
+    nav ul {
+    font-size: 10px;
+    margin: 15px 0;
+    }
+
+    #logo img {
+        width: 50px;
+    }
+
+    #logo {
+        margin-top: 5px;
+    }
+
+    .catalog {
+        margin-top: -10px;
+        height: 150px;
+        width: 80px;
+        transform: translateX(-104%);
+    }
+    
+    .catalog h1 {
+        font-size: 10px;
+        padding: 0px 0px;
+        margin-top: 10%;
+    }
+    
+    .catalog a {
+        font-size: 6px;
+        margin-top: 0px;
+    }
+
+    .catalog ul {
+        margin-top: 10px;
+    }
+    
+    .catalog ul li {
+        margin-left: -25px;
+        margin-bottom: 8px;
+        line-height: 5px;
+    }
+    
+    .catalog:after {
+        font-size: 10px;
+        top: 72px;
+        left: 54px;
+        padding: 0px 15px;
+        border-radius: 0 0 3px 3px;
+    }
+
+    .news {
+        margin-left: 10%;
+        margin-top: 80px;
+        margin-right: 10%;
+    }
+    
+    .article {
+        margin-bottom: 50px;
+        border-radius: 5px;
+        box-shadow: 0px 0px 5px 10px rgba(27, 27, 27, 0.45);
+    
+    }
+    
+    .article img {
+        height: 50px;
+    }
+    
+    .description {
+        padding-left: 40px;
+        width: 100%;
+        height: 100%;
+    
+    }
+    
+    .article p {
+        font-size: 8px;
+    }
+    
+    h1 {
+        font-size: 12px;
+        padding: 0;
+        margin-top: 0;
+    }
+    
+     .more {
+        margin-left: 20px;
+     }
+    
+}
